--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,32 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <style>
-        .count {
-            color: black;
-            margin-bottom: 30vh;
-            font-size: 3em;
-            margin-bottom: 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .button{
-            margin:30vh
-        }
-
-        .clickButton {
-            padding: 15px 30px;
-            font-size: 1.5em;
-            color: white;
-            background-color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-
-
         .buttons {
             display: inline;
             margin-right: 15px;
@@ -44,16 +18,7 @@
             justify-content: center;
         }
 
-        .img{
-            height:50px;
-            width:50px;
-            margin: 10px;
-        }
 
-        .coin{
-            height:300px;
-            width:300px;
-        }
         footer .buttons a {
             font-size: 32px;
             margin:10px;
@@ -62,10 +27,6 @@
 
         div#a {
             background-image: none;
-        }
-        .coin-count{
-            height:45px;
-            weight:45px;
         }
         .center-screen {
             display: flex;
@@ -82,22 +43,6 @@
             width: 100%;
             height: 80px;
         }
-        .center-screen2 {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: baseline;
-            text-align: center;
-        }
-        .rounded-border {
-            display: inline-block;
-            padding: 10px 20px;
-            color:black;
-            border-color:black;
-            border-radius: 10px; /* Закругленные края */
-            border: 2px solid #ccc; /* Граница */
-            font-size: 1.5em; /* Размер шрифта */
-            text-align: center; /* Центрирование текста */
     </style>
 </head>
 
@@ -110,41 +55,35 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="/" class="nav-link px-3 text-secondary">Home</a></li>
-              <li><a href="/improvements" class="nav-link px-3 text-white">Improvements</a></li>
-              <li><a href="/profile" class="nav-link px-3 text-white">Improvements</a></li>
+          <li><a href="/" class="nav-link px-3 text-secondary">Home</a></li>
+          <li><a href="/improvements" class="nav-link px-3 text-white">Improvements</a></li>
         </ul>
-
       </div>
     </div>
-  </header>
-    <div class="center-screen2">
-        <img  class="coin-count" src="/static/coin.png">
-        <div class="count" id="count">{{ click_count }}</div>
-    </div>
-    <div class="center-screen">
-        <form action="/clicker" method="post">
-            <input type="hidden" id="user_id" name="user_id" value="1">
-            <button class="clickButton">
-                <img class="coin" src="/static/coin.png">
-            </button>
-        </form>
-    </div>
-    <div class="rounded-border">
-        <h3 id="energy">Ваша энергия: {{energy}}/{{current_energy}}</h3>
-    </div>
-    <footer class="footer">
+</header>
+<div class="text-center">
+  <img src="/static/user.jpg" width="150" class="rounded-5 border shadow mt-5" alt="">
+    <h2>username</h2>
+    <br>
+    <h2>Инвентарь</h2>
+</div>
+
+
+
+<footer class="footer">
         <div class="buttons">
             <a href="/"><i class="bi bi-house"></i></a>
             <a href="/improvements"><i class="bi bi-bar-chart-line"></i></a>
             <a href="/profile"><i class="bi bi-person-bounding-box"></i></a>
         </div>
-    </footer>
+</footer>
+
+
+
 </body>
 <script type="text/javascript">
     Telegram.WebApp.ready();
     var initData = Telegram.WebApp.initDataUnsafe;
-    console.log(initData);
     var userId = initData.user.id;
     document.getElementById('user_id').value = userId;
 </script>
